--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   flutter_riverpod: ^1.0.0-dev.9
+  provider: ^6.0.5
 
 
 dev_dependencies:
